# NLP_QA_chatbot

./: .gitignore  README.md  run_api.py
playground/: practice.ipynb
playground/data/: Transcript Otter - A1.txt
qa-app/: Dockerfile  Makefile  parameters.yaml  pyproject.toml  static.yaml
qa-app/qa_app/: test_api.py
qa-app/src/: get_model_artifacts.py  run_api.py  utils.py  vector_store_utils.py
qa-app/src/utils/: general_utils.py  model_utils.py  rag_utils.py  vector_store_utils.py
qa-app/static/: script.js  style.css
qa-app/templates/: index.html
